find_package(tesseract_support REQUIRED)
find_package(tesseract_geometry REQUIRED)

find_package(assimp)
link_directories(${ASSIMP_LIBRARY_DIRS})

add_executable(${PROJECT_NAME}_load_urdf_example load_urdf_example.cpp)
target_link_libraries(${PROJECT_NAME}_load_urdf_example ${PROJECT_NAME} console_bridge tesseract::tesseract_support)
if(NOT MSVC)
	target_compile_options(${PROJECT_NAME}_load_urdf_example PRIVATE -Wsuggest-override -Wconversion -Wsign-conversion)
	if(CXX_FEATURE_FOUND EQUAL "-1")
		target_compile_options(${PROJECT_NAME}_load_urdf_example PRIVATE -std=c++11)
	else()
		target_compile_features(${PROJECT_NAME}_load_urdf_example PRIVATE cxx_std_11)
	endif()
endif()
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(${PROJECT_NAME}_load_urdf_example PRIVATE -mno-avx)
  else()
    message(WARNING "Non-GNU compiler detected. If using AVX instructions, Eigen alignment issues may result.")
  endif()

install(TARGETS ${PROJECT_NAME}_load_urdf_example DESTINATION bin)
